修改显示问题

--- a/wisdomCampus/html/checkNotice/all-list.html
+++ b/wisdomCampus/html/checkNotice/all-list.html
@@ -678,7 +678,7 @@
 				if(imgURL == null || imgURL.length == 0) {
 					tempUrl = '../../img/login/headImg.png';
 				} else {
-					tempUrl = imgURL;
+					tempUrl = imgURL+'?'+Math.random();
 				}
 				//				console.log('tempUrl:' + tempUrl);
 				return tempUrl;
