--- a/wisdomCampus/html/mine/about.html
+++ b/wisdomCampus/html/mine/about.html
@@ -10,13 +10,13 @@
 			.mui-bar-nav {
 				background-color: #63BBFF;
 			}
-			
+
 			.head-img {
 				width: 140px;
 				height: 140px;
 				margin: 0 auto;
 			}
-			
+
 			.bottom-text {
 				position: fixed;
 				margin-left: auto;
@@ -55,6 +55,25 @@
 					</li>
 				</ul>
 			</div>-->
+			<div class="mui-row" style="margin-top: 15px;">
+				<ul class="mui-table-view mui-table-view-chevron">
+					<!-- <li class="mui-table-view-cell" id="qqqq">
+						<a style="font-size: 14px;" href="javaScript:void(0)" class="mui-navigate-right">功能介绍</a>
+					</li> -->
+					<li class="mui-table-view-cell" id="wwww">
+						<a style="font-size: 14px;" href="javaScript:void(0)" class="mui-navigate-right">公司介绍</a>
+					</li>
+					<li class="mui-table-view-cell" id="eeee">
+						<a style="font-size: 14px;" href="javaScript:void(0)" class="mui-navigate-right">用户隐私政策</a>
+					</li>
+					<li class="mui-table-view-cell no-bgc">
+						<a style="font-size: 14px;float: left;width: 20%;" href="javaScript:void(0)">投诉反馈</a>
+						<div style="float: left;width: 90%;margin-left: 30%;">
+							<div style="font-size: 14px;word-break: break-all;">如果您有任何建议或问题欢迎给我们发送邮件:<a href="mailto:kf@jsy8800.com">&emsp;&emsp;kf@jsy8800.com</a></div>
+						</div>
+					</li>
+				</ul>
+			</div>
 		</div>
 		<div class="mui-row bottom-text">
 			<p class='mui-ellipsis'>Copyright&copy;2006-2018</p>
@@ -62,25 +81,35 @@
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/jquery.min.js"></script>
+		<script src="../../js/utils/utils.js"></script>
 		<script type="text/javascript">
 			mui.init()
 
 			mui.plusReady(function() {
-					plus.runtime.getProperty(plus.runtime.appid, function(inf) {
-						console.log('应用版本号:' + plus.runtime.version + ',资源升级版本号:' + inf.version)
-						$('#version').html('智慧校园' + inf.version)
-					});
+				plus.runtime.getProperty(plus.runtime.appid, function(inf) {
+					console.log('应用版本号:' + plus.runtime.version + ',资源升级版本号:' + inf.version)
+					$('#version').html('智慧校园' + inf.version)
+				});
 			});
 
-//			document.getElementById('qqqq').addEventListener('tap', function() {
-//				mui.toast('功能暂未开放');
-//			});
-//			document.getElementById('wwww').addEventListener('tap', function() {
-//				mui.toast('功能暂未开放');
-//			});
-//			document.getElementById('eeee').addEventListener('tap', function() {
-//				mui.toast('功能暂未开放');
-//			});
+			//			document.getElementById('qqqq').addEventListener('tap', function() {
+			//				mui.toast('功能暂未开放');
+			//			});
+			//			document.getElementById('wwww').addEventListener('tap', function() {
+			//				mui.toast('功能暂未开放');
+			//			});
+			//			document.getElementById('eeee').addEventListener('tap', function() {
+			//				mui.toast('功能暂未开放');
+			//			});
+			document.getElementById('wwww').addEventListener('tap', function() {
+				// mui.toast('功能暂未开放');
+				var urlStr = encodeURI("http://www.jsy8800.com")
+				plus.runtime.openURL(urlStr);
+			});
+			document.getElementById('eeee').addEventListener('tap', function() {
+				// mui.toast('功能暂未开放');
+				utils.mOpenWithData("../../html/index/privace.html", {});
+			});
 		</script>
 	</body>
 
